tests/errors/syn_switch2.java
public class syn_switch2{
public static void main(String[] args){
 switch args.length ) { }
}
}